# online-store-app

backend/: .env.example  .gitignore  Taskfile.yml  docker-compose.yaml  main.py  pyproject.toml
backend/api/: __init__.py
backend/api/v1/: __init__.py
backend/app/bootstrap/: __init__.py  superuser.py
backend/app/controllers/: __init__.py  auth.py  role.py  users.py
backend/app/models/: __init__.py  category.py  role.py  user.py  user_role.py
backend/app/repositories/: __init__.py  role.py  user_role.py  users.py
backend/app/schemas/: auth.py
backend/core/: config.py  server.py
backend/core/controller/: base.py
backend/core/database/: __init__.py  session.py
backend/core/dependencies/: auth.py  bootstrap.py  controllers.py  session.py  users.py
backend/core/exceptions/: __init__.py  base.py
backend/core/factory/: __init__.py  controllers.py  repositories.py
backend/core/redis/: base.py  client.py  redis_client.py  redis_store.py
backend/core/repository/: base.py
backend/core/security/: __init__.py  jwt.py  password.py
backend/migrations/: env.py
backend/migrations/versions/: 041ee92f18eb_added_the_cascade.py  118d6431220f_updated_the_user_table_02.py  1c825038fb67_added_the_users_table.py  25abb803a75f_added_the_roles_nd_user_role.py  2d1530378c15_feat_added_the_user_roles_and_user_roles.py  420eef3fee02_feat_added_the_audit_mixin_and_category_.py  5d05fba3aa85_initial_tables.py  6bd3c6e430b8_updated_the_user_table.py  bf853228464a_initial_models.py  fb85e4e03306_updated_the_id_of_user.py
backend/scripts/: seed.py
(+101 files in other folders)
